librsvg-rebind/librsvg-rebind/sys/src/lib.rs


    //=========================================================================
    // Other functions
    //=========================================================================
    pub fn rsvg_cleanup();
    pub fn rsvg_init();
    pub fn rsvg_pixbuf_from_file(
        filename: *const c_char,
        error: *mut *mut glib::GError,
    ) -> *mut gdk_pixbuf::GdkPixbuf;
    pub fn rsvg_pixbuf_from_file_at_max_size(
        filename: *const c_char,
        max_width: c_int,
        max_height: c_int,
        error: *mut *mut glib::GError,
    ) -> *mut gdk_pixbuf::GdkPixbuf;
    pub fn rsvg_pixbuf_from_file_at_size(
        filename: *const c_char,
        width: c_int,
        height: c_int,
        error: *mut *mut glib::GError,
    ) -> *mut gdk_pixbuf::GdkPixbuf;
    pub fn rsvg_pixbuf_from_file_at_zoom(
        filename: *const c_char,
        x_zoom: c_double,
        y_zoom: c_double,
        error: *mut *mut glib::GError,
    ) -> *mut gdk_pixbuf::GdkPixbuf;
    pub fn rsvg_pixbuf_from_file_at_zoom_with_max(
        filename: *const c_char,
        x_zoom: c_double,
        y_zoom: c_double,
        max_width: c_int,
        max_height: c_int,
        error: *mut *mut glib::GError,
    ) -> *mut gdk_pixbuf::GdkPixbuf;
    pub fn rsvg_set_default_dpi(dpi: c_double);
    pub fn rsvg_set_default_dpi_x_y(dpi_x: c_double, dpi_y: c_double);
    pub fn rsvg_term();

}
